Refactor ChapterNotifyService for clarity and performance.
+ Add missing `Scanlator` import in `ChapterNotifyService`.
+ Replace `collect(Collectors.toList())` with `toList()` for simplicity.
+ Update comments to English for consistency and readability.
+ Refactor logic to use `Scanlator::getName` directly in `sendWorkNotifications`.
- Remove unused method `findByWorkId` from `ChapterNotifyService`.